tests/snapshots/bundled_info_panel__a-bare-local-session.snap
---
source: tests/bundled_info_panel.rs
expression: "record::tree(&native)"
---
list cursor=none scrollbar=false
  paragraph
    text "Name: " muted
    text "demo"
  paragraph
    text "Status: " muted
    text "○ Idle" status_idle bold
  paragraph
    text "Agent: " muted
    text "claude" role bold
  paragraph
    text "Repos: " muted
    text "thurbox" branch
