tests/snapshots/bundled_info_panel__a-sparse-agent-report.snap
---
source: tests/bundled_info_panel.rs
expression: "record::tree(&native)"
---
list cursor=none scrollbar=false
  paragraph
    text "Name: " muted
    text "fix-osc52-tmux"
  paragraph
    text "Status: " muted
    text "◆ Blocked" status_blocked bold
  paragraph
    text "Agent: " muted
    text "claude" role bold
  paragraph
    text "Parent: " muted
    text "lead" secondary
  paragraph
    text "Host:  " muted
    text "⇅ devbox" accent
  paragraph
    text "Hooks: " muted
    text "degraded — psmux host" muted
  paragraph
    text "Activity: " muted
    text "reviewing a very long agent-supplied activity line that has to wrap somewhere" secondary
  paragraph
    text "Signal:   " muted
    text "needs approval to write outside the worktree" status_blocked
  paragraph
    text "Repos: " muted
    text "thurbox/fix/osc52" branch
  paragraph
    text "       " muted
    text "docs" branch
  paragraph
    text "       " muted
    text "web" branch
  paragraph
    text "Changes: " muted
    text "4 files"
    text " "
    text "+213" added
    text " / " muted
    text "-57" status_error
  paragraph
    text "Sync:    " muted
    text "↑3 ↓2" muted
  gauge "CPU" percent=13.25 suffix=none
  paragraph
    text "RAM" muted
    text "  500.0 MB"
  divider
  paragraph
    text "Agent (v2.1.3)" accent bold
  paragraph
    text "Cost:    " muted
    text "$0.0423" accent
  paragraph
    text "Time:    " muted
    text "820ms"
  paragraph
    text "Tokens:  " muted
    text "- in / 640 out"
  gauge "Context" percent=7.0 suffix=none
  divider
  paragraph
    text "Usage (max · devbox)" accent bold
  gauge "5h" percent=63.4 suffix="63%  2h 35m"
  gauge "Week" percent=12.0 suffix="12%"
  divider
  paragraph
    text "System" accent bold
  gauge "CPU" percent=42.7 suffix=none
  gauge "RAM" percent=56.25 suffix="9.0/16.0 GB"
  paragraph
    text "Disk" muted
    text "  3.0 GB (thurbox dir)"
  divider
  paragraph
    text "Automations (2)" accent bold
  paragraph
    text "in 2m 30s" accent
    text "  "
    text "shepherd-tick" secondary
  paragraph
    text "in 3h 20m" accent
    text "  "
    text "renovate-tick" secondary
